
public class AnimationTags
{
    public const string WALKING = "Walking";
    public const string JUMPING = "Jumping";
    public const string GROUNDED = "Grounded";

    public const string PUNCH_1_TRIGGER = "FirstPunch";
    public const string PUNCH_2_TRIGGER = "SecondPunch";
    public const string PUNCH_3_TRIGGER = "ThirdPunch";
}
